<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vigilant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map2">Map2</string>
    <string name="add_report_button">Report</string>
    <string name="user_profile_button">Profile</string>
    <string name="list_problem_button">List</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_edit_email">EditEmail</string>
    <string name="title_activity_edit_password">EditPassword</string>
    <string name="edit_password_hint">Type your new password</string>
    <string name="edit_password_retype_hint">Re-type your password</string>
    <string name="title_activity_edit_city">EditCity</string>
    <string name="title_activity_add_report">AddReport</string>
    <string name="title_activity_login">Login</string>
    <string name="login_action">Log in</string>
    <string name="login_observation_title">Don\'t worry</string>
    <string name="login_observation_text">Your personal data won\'t be visible for other people</string>
    <string name="title_activity_create_profile">CreateProfile</string>
    <string name="terms_condition_text">Clicking on Create button means you agree with</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="create_text_button">Create</string>
    <string name="mock_1_paragraph">Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</string>
    <string name="mock_2_paragraph">Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.  Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</string>
    <string name="mock_4_paragraph">Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.  Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.  Casamentiss faiz malandris se pirulitá, Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer Ispecialista im mé intende tudis nuam golada, vinho, uiski, carirí, rum da jamaikis, só num pode ser mijis. Adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.  Cevadis im ampola pa arma uma pindureta. Nam varius eleifend orci, sed viverra nisl condimentum ut. Donec eget justis enim. Atirei o pau no gatis. Viva Forevis aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Copo furadis é disculpa de babadis, arcu quam euismod magna, bibendum egestas augue arcu ut est. Delegadis gente finis. In sit amet mattis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis. Pellentesque viverra accumsan ipsum elementum gravidis.</string>
    <string name="mock_username">Berhell</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_login_facebook">Enter with Facebook</string>
    <string name="app_id">146714232165859</string>
    <string name="title_activity_user_parse_store">UserParseStore</string>
    <string name="create_profile__header_text">New Vigilant</string>
    <string name="create_profile__info_nickname">This nickname will be shown instead of your name</string>
    <string name="button_bothered_clicked_reportDescription">I am bothered</string>
    <string name="button_bothered_normal_reportDescription">Are you bothered?</string>

</resources>
