<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/LayoutBackground_Vigilant">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        style="@style/LayoutBackground_Vigilant">

        <ImageView
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_logo_login"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/login_action"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="@dimen/vigilant_object_vertical_margin_root_layout" />

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_facebook_login"
                android:onClick="facebookLogin"/>

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_twitter_login"
                android:onClick="twitterLogin"/>

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_google_login"
                android:onClick="googleLogin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/login_observation_title"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="24sp"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/login_observation_text"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>