<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/LayoutBackground_Vigilant">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        style="@style/LayoutBackground_Vigilant">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image_mock">

            <ImageView
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_logo_create_profile"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="30dp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_dark">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="New"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_width="fill_parent"
            android:background="@color/white"
            style="@style/EditText_canvas_vigilant"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/address_report_input_edittext"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:hint="Type a username"
                style="@style/EditText_vigilant"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/terms_condition_text"
                android:gravity="center_horizontal"
                android:textColor="#000000"
                android:textSize="12sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/terms_condition"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textColor="#000000"
                android:textSize="12sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/add_report_input_button"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/create_text_button"
                android:textColor="@color/white"
                android:background="@drawable/image_mock"
                android:onClick="createNewProfile"/>
        </LinearLayout>




    </LinearLayout>

</LinearLayout>